# install-is-pip-install

./: README.md  pyproject.toml
src/: install.py
