[build-system]
requires = [
	"setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "install-is-pip-install"
version = "1.0"
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "Alias 'install' to 'pip install'"
readme = "README.md"
requires-python = ">=3"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DavidBuchanan314/install-is-pip-install"
Issues = "https://github.com/DavidBuchanan314/install-is-pip-install/issues"
